--- a/miniTC/miniTC/Properties/Resources.resx
+++ b/miniTC/miniTC/Properties/Resources.resx
@@ -123,6 +123,9 @@
   <data name="DriveLabel" xml:space="preserve">
     <value>drive</value>
   </data>
+  <data name="Error" xml:space="preserve">
+    <value>File already exist</value>
+  </data>
   <data name="PathLabel" xml:space="preserve">
     <value>path</value>
   </data>
